[package]
name = "mango_ir"
description = "The Mango programming IR (UNDER CONSTRUCTION)"
version = "0.1.0"
authors = ["Mark <mverleg.noreply@gmail.com>"]
edition = "2018"
homepage = "https://mangocode.org/"
license = "Apache-2.0"
publish = true

[dependencies]
lazy_static = "1.4.0"
regex = "1.4.5"
ustr = "0.7.0"
